--- a/src/GIMI-ModManager.WinUI/Views/ShellPage.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/ShellPage.xaml
@@ -75,11 +75,14 @@
                     </NavigationViewItem.Icon>
                 </NavigationViewItem>
 
-                <!--<NavigationViewItem helpers:NavigationHelper.NavigateTo="GIMI_ModManager.WinUI.ViewModels.DebugViewModel" Content="Debug">
+                <NavigationViewItem
+                    x:Name="DebugItem"
+                    helpers:NavigationHelper.NavigateTo="GIMI_ModManager.WinUI.ViewModels.DebugViewModel"
+                    Content="Debug">
                     <NavigationViewItem.Icon>
                         <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}" Glyph="&#xE946;" />
                     </NavigationViewItem.Icon>
-                </NavigationViewItem>-->
+                </NavigationViewItem>
 
             </NavigationView.MenuItems>
 
